# referendum-download

./: .gitattributes  .gitignore  LICENSE.md  LOG.md  README.md  pyproject.toml  referendum_download.py
data/: lookup_eligendo_istat.csv
data/20260322/: affluenza.csv  enti.jsonl  enti_estero.jsonl  scrutini_estero.jsonl  scrutini_estero_flat.csv  scrutini_estero_flat.jsonl  scrutini_flat.csv  scrutini_flat.jsonl  scrutini_province.jsonl  scrutini_province_flat.csv  scrutini_province_flat.jsonl  scrutini_regioni.jsonl  scrutini_regioni_flat.csv  scrutini_regioni_flat.jsonl
docs/: PRD.md  README.md  api-discovery-notes.md  api-reference.md  url-patterns.md
lookup/: README.md  generate_lookup.sh  lookup_eligendo_istat.csv  lookup_province_eligendo_istat.csv
mappe/bivariate/: README.md  bivariate_map.py  bivariate_map_si50.py  bivariate_map_si50_trentino.py  bivariate_map_simone.py
tests/: test_referendum_download.py
